# ppx_deriving_tupleable

./: .gitignore  README.md  dune-project  ppx_deriving_tupleable.opam
src/: dune  ppx_deriving_tupleable.ml
test/: dune  ppx_deriving_tupleable_test.ml  ppx_deriving_tupleable_test_data.ml  ppx_deriving_tupleable_test_data.mli
